<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >
        <Button
            android:id="@+id/btn_all"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/btn_all"
            android:textColor="@color/main_page"
            />
        <Button
            android:id="@+id/btn_male"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/main_page"
            android:text="@string/btn_male" />
        <Button
            android:id="@+id/btn_female"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/btn_female"
            android:textColor="@color/main_page" />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/singer_lv"
       />
</LinearLayout>