<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity"
    android:background="@color/main_color">
    <!--个人信息部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@color/center_color">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:background="@drawable/touxiang">
        </ImageView>
        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="洁洁子的恐龙"
            android:textSize="20sp">

        </TextView>
    </LinearLayout>
    <!--主页图标部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:weightSum="3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--本地音乐-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/icon_local"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/icon_local">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/local"
                android:gravity="center">
            </TextView>
        </LinearLayout>
        <!--我的收藏-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/icon_collect"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/icon_mycollect">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/collect"
                android:gravity="center">
            </TextView>
        </LinearLayout>
        <!--最近播放-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/icon_recent_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/icon_recent">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recent_play"
                android:gravity="center">
            </TextView>
        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_margin="10dp"
        >

        <!-- 最近播放横向列表 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/recent_play"
                android:textSize="15sp"
                android:layout_gravity="center">

            </TextView>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:background="@drawable/more">
            </ImageView>
        </LinearLayout>
        <!-- 最近播放 -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recent_list"
                />
        </HorizontalScrollView>
        <!-- 自建歌单 && 收藏歌单-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="vertical">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:background="@color/font_default"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_page"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_height="110dp"/>
        </LinearLayout>
        <!--音乐播放部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="340dp"
            android:background="@color/white1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_gravity="center"
                android:background="@drawable/music"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="竹蜻蜓"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="150dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_play"/>

        </LinearLayout>


    </FrameLayout>





</LinearLayout>